# autonomix

./: .gitignore  README.md  pyproject.toml
docs/: bdd.md  endpoints.md
src/back/: data.py  database.db  db.py  db_test.py  ddl.sql  endpoints.py  server.py  tests_endpoints.py
src/front/: .token  api.py  main.py  recipe.py  shopping_list.py  speech.py  telephone.py  to_do.py
src/front/main_menu/: main_menu.py
src/front/phone/: telephone.py
src/front/shopping_list/: shopping_list.py
